# pypackager

./: .gitignore  LICENSE  README.md  pypackager.toml.example  pyproject.toml
src/pypackager/: __init__.py  cli.py  config.py  logging.py  plugins.py
src/pypackager/builders/: __init__.py  binary.py  docker.py  wheel.py
src/pypackager/core/: builder.py  environment.py  pipeline.py  project.py  resolver.py  scanner.py
